[STA-003] - Updating TSOA and creating and seeding user models.
